force-app/main/default/objects/Log__c/Log__c.object-meta.xml
<CustomObject>
    <description>This object stores logs for a salesforce transaction</description>
    <label>Log</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>