force-app/main/default/objects/Log__c/fields/Aggregate_Queries__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Queries__c</fullName>
    <description>Returns the number of aggregate queries that have been processed with any SOQL query statement.</description>
    <inlineHelpText>Returns the number of aggregate queries that have been processed with any SOQL query statement.</inlineHelpText>
    <label>Aggregate Queries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>