force-app/main/default/objects/Log__c/fields/CPU_Time__c.field-meta.xml
<CustomField>
    <fullName>CPU_Time__c</fullName>
    <description>Returns the CPU time (in milliseconds) that has been used in the current transaction.</description>
    <inlineHelpText>Returns the CPU time (in milliseconds) that has been used in the current transaction.</inlineHelpText>
    <label>CPU Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>