force-app/main/default/objects/Log__c/fields/DML_Rows__c.field-meta.xml
<CustomField>
    <fullName>DML_Rows__c</fullName>
    <description>Returns the number of records that have been processed with any statement that counts against DML limits, such as DML statements, the Database.emptyRecycleBin method, and other methods.</description>
    <inlineHelpText>Returns the number of records that have been processed with any statement that counts against DML limits, such as DML statements, the Database.emptyRecycleBin method, and other methods.</inlineHelpText>
    <label>DML Rows</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>