force-app/main/default/objects/Log__c/fields/DML_Statements__c.field-meta.xml
<CustomField>
    <fullName>DML_Statements__c</fullName>
    <description>Returns the number of DML statements (such as insert, update or the database.EmptyRecycleBin method) that have been called.</description>
    <inlineHelpText>Returns the number of DML statements (such as insert, update or the database.EmptyRecycleBin method) that have been called.</inlineHelpText>
    <label>DML Statements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>