force-app/main/default/objects/Log__c/fields/Email_Invocations__c.field-meta.xml
<CustomField>
    <fullName>Email_Invocations__c</fullName>
    <description>Returns the number of email invocations (such as sendEmail) that have been called.</description>
    <inlineHelpText>Returns the number of email invocations (such as sendEmail) that have been called.</inlineHelpText>
    <label>Email Invocations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>