force-app/main/default/objects/Log__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>Retrieves the URL for the endpoint of the external server for this request.</description>
    <inlineHelpText>Retrieves the URL for the endpoint of the external server for this request.</inlineHelpText>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>