force-app/main/default/objects/Log__c/fields/Headers__c.field-meta.xml
<CustomField>
    <fullName>Headers__c</fullName>
    <description>Retrieves the contents of the request header.</description>
    <inlineHelpText>Retrieves the contents of the request header.</inlineHelpText>
    <label>Headers</label>
    <type>TextArea</type>
</CustomField>