force-app/main/default/objects/Log__c/fields/Heap_Size__c.field-meta.xml
<CustomField>
    <fullName>Heap_Size__c</fullName>
    <description>Returns the approximate amount of memory (in bytes) that has been used for the heap.</description>
    <inlineHelpText>Returns the approximate amount of memory (in bytes) that has been used for the heap.</inlineHelpText>
    <label>Heap Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>