force-app/main/default/objects/Log__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <description>Returns the line number from where the exception was thrown.</description>
    <inlineHelpText>Returns the line number from where the exception was thrown.</inlineHelpText>
    <label>Line Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>