force-app/main/default/objects/Log__c/fields/Queries__c.field-meta.xml
<CustomField>
    <fullName>Queries__c</fullName>
    <description>Returns the number of SOQL queries that have been issued.</description>
    <inlineHelpText>Returns the number of SOQL queries that have been issued.</inlineHelpText>
    <label>Queries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>