force-app/main/default/objects/Log__c/fields/Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Request_Body__c</fullName>
    <description>Retrieves the body of this request.</description>
    <inlineHelpText>Retrieves the body of this request.</inlineHelpText>
    <label>Request Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>