force-app/main/default/objects/Log__c/fields/Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Response_Body__c</fullName>
    <description>Retrieves the body returned in the response.</description>
    <inlineHelpText>Retrieves the body returned in the response.</inlineHelpText>
    <label>Response Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>