force-app/main/default/objects/Log__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>Returns the stack trace as a string.</description>
    <inlineHelpText>Returns the stack trace as a string.</inlineHelpText>
    <label>Stack Trace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>