force-app/main/default/objects/Log__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <description>Retrieves the value of the status code returned in the response.</description>
    <inlineHelpText>Retrieves the value of the status code returned in the response.</inlineHelpText>
    <label>Status Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>