force-app/main/default/objects/Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEBUG</fullName>
            </value>
            <value>
                <fullName>API INBOUND</fullName>
            </value>
            <value>
                <fullName>EXCEPTION</fullName>
            </value>
            <value>
                <fullName>API OUTBOUND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>