force-app/main/default/objects/Log__c/fields/Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Type_Name__c</fullName>
    <description>Returns the type of exception, such as DmlException, ListException, MathException, and so on.</description>
    <inlineHelpText>Returns the type of exception, such as DmlException, ListException, MathException, and so on.</inlineHelpText>
    <label>Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>